--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="date d-flex justify-content-center align-items-center">
         <div class="container-fluid row">
           <div class="col-lg-8 col-md-12 col-sm-12 col-12">
-            <div class="container p-2">
+            <div class="container px-0">
               <div class="ratio ratio-16x9">
                 <iframe
                   src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0"
